[gd_scene load_steps=17 format=3 uid="uid://bu53qe6jcyqqd"]

[ext_resource type="Script" path="res://scripts/rooms/boss_rush_room.gd" id="1_0ngu6"]
[ext_resource type="Script" path="res://scripts/controllers/GameController.gd" id="1_17bj7"]
[ext_resource type="PackedScene" uid="uid://dmek2nyuv6slq" path="res://scenes/player.tscn" id="2_4a2v7"]
[ext_resource type="Script" path="res://scripts/HealthSystem.gd" id="3_e5xyu"]
[ext_resource type="Script" path="res://scripts/controllers/UIController.gd" id="4_6dj40"]
[ext_resource type="PackedScene" uid="uid://bovnu42nyxntp" path="res://scenes/menu/VICTORY.tscn" id="5_3oqc8"]
[ext_resource type="Script" path="res://scripts/misc/destroyer.gd" id="5_mq6oq"]
[ext_resource type="Shader" path="res://shaders/background_scroll.gdshader" id="7_m5h20"]
[ext_resource type="Texture2D" uid="uid://g67vadu1dviy" path="res://art/backgrounds/bg-2.png" id="8_14drq"]
[ext_resource type="PackedScene" uid="uid://bka7b4ccpto4u" path="res://scenes/menu/debug.tscn" id="9_ce1wc"]
[ext_resource type="PackedScene" uid="uid://dmy5af4kanhpx" path="res://scenes/menu/TryAgain.tscn" id="11_5mu0o"]
[ext_resource type="AudioStream" uid="uid://pxenqllh2kce" path="res://audio/music/gameplay_a.ogg" id="13_a5ccd"]
[ext_resource type="Script" path="res://scripts/controllers/SoundGuy.gd" id="13_fq7vs"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q3mws"]
size = Vector2(87, 880)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4gg3g"]
size = Vector2(524.5, 47.7403)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rmfjw"]
shader = ExtResource("7_m5h20")
shader_parameter/direction = Vector2(0.1, 0.4)
shader_parameter/speed_scale = 0.1

[node name="Boss Rush Scene" type="Node2D" node_paths=PackedStringArray("boss_spawn_point")]
script = ExtResource("1_0ngu6")
boss_spawn_point = NodePath("BossSpawnPoint")

[node name="GameController" type="Node" parent="."]
script = ExtResource("1_17bj7")

[node name="Health System" type="Node" parent="GameController" node_paths=PackedStringArray("player")]
script = ExtResource("3_e5xyu")
player = NodePath("../../Player")

[node name="UI Controller" type="Node" parent="GameController" node_paths=PackedStringArray("player_score", "player_hp", "player_lives", "boss_hp", "boss_phase", "GAMEOVER_screen", "VICTORY_screen", "health_sys")]
script = ExtResource("4_6dj40")
player_score = NodePath("VBoxContainer/Score")
player_hp = NodePath("VBoxContainer/HP")
player_lives = NodePath("VBoxContainer/Lives")
boss_hp = NodePath("Boss/Boss HP")
boss_phase = NodePath("Boss/Boss Phase")
GAMEOVER_screen = NodePath("../../CanvasLayer/TRY AGAIN")
VICTORY_screen = NodePath("../../CanvasLayer/GAME OVER")
health_sys = NodePath("../Health System")

[node name="VBoxContainer" type="VBoxContainer" parent="GameController/UI Controller"]
offset_left = 10.0
offset_top = 10.0
offset_right = 184.0
offset_bottom = 146.0

[node name="Score" type="RichTextLabel" parent="GameController/UI Controller/VBoxContainer"]
visible = false
clip_contents = false
layout_mode = 2
text = "Score: 000 000 000 000"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="HP" type="RichTextLabel" parent="GameController/UI Controller/VBoxContainer"]
clip_contents = false
layout_mode = 2
text = "HP: 2"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Lives" type="RichTextLabel" parent="GameController/UI Controller/VBoxContainer"]
clip_contents = false
layout_mode = 2
text = "Lives: 1"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Boss" type="VBoxContainer" parent="GameController/UI Controller"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_top = 10.0
offset_right = -9.0
offset_bottom = 146.0
grow_horizontal = 0
pivot_offset = Vector2(90, 0)

[node name="Boss HP" type="RichTextLabel" parent="GameController/UI Controller/Boss"]
clip_contents = false
layout_mode = 2
bbcode_enabled = true
text = "Boss HP: 2"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Boss Phase" type="RichTextLabel" parent="GameController/UI Controller/Boss"]
clip_contents = false
layout_mode = 2
bbcode_enabled = true
text = "Phase: 1/4"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Player" parent="." instance=ExtResource("2_4a2v7")]
position = Vector2(222, 546)

[node name="Destroyer" type="Area2D" parent="."]
position = Vector2(0, -77)
script = ExtResource("5_mq6oq")
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Destroyer"]
position = Vector2(558, 378)
shape = SubResource("RectangleShape2D_q3mws")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Destroyer"]
position = Vector2(239.75, 17)
shape = SubResource("RectangleShape2D_4gg3g")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Destroyer"]
position = Vector2(-73, 374)
shape = SubResource("RectangleShape2D_q3mws")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Destroyer"]
position = Vector2(244, 754)
shape = SubResource("RectangleShape2D_4gg3g")

[node name="Bg" type="TextureRect" parent="."]
z_index = -2000
material = SubResource("ShaderMaterial_rmfjw")
offset_left = -50.0
offset_top = -34.0
offset_right = 538.0
offset_bottom = 697.0
texture = ExtResource("8_14drq")
stretch_mode = 1
metadata/_edit_lock_ = true

[node name="Debug" parent="." instance=ExtResource("9_ce1wc")]

[node name="VBoxContainer" parent="Debug" index="0"]
visible = false

[node name="VBoxContainer2" parent="Debug" index="1"]
visible = false

[node name="BossSpawnPoint" type="Node2D" parent="."]
visible = false
position = Vector2(240, 100)
metadata/_edit_lock_ = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GAME OVER" parent="CanvasLayer" instance=ExtResource("5_3oqc8")]
visible = false
metadata/_edit_lock_ = true

[node name="TRY AGAIN" parent="CanvasLayer" instance=ExtResource("11_5mu0o")]
visible = false
metadata/_edit_lock_ = true

[node name="soundController" type="Node" parent="."]
script = ExtResource("13_fq7vs")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="soundController"]
stream = ExtResource("13_a5ccd")
autoplay = true
bus = &"BGM"

[connection signal="cease_fire" from="GameController" to="Player" method="cease_fire"]
[connection signal="enable_shooting" from="GameController" to="Player" method="_on_game_controller_enable_shooting"]
[connection signal="GAMEOVER" from="GameController/Health System" to="GameController/UI Controller" method="show_GAMEOVER_screen"]
[connection signal="must_update_ui" from="GameController/Health System" to="GameController/UI Controller" method="update_ui"]
[connection signal="player_death" from="GameController/Health System" to="." method="bullet_clear"]
[connection signal="player_is_hurt" from="GameController/Health System" to="." method="bullet_clear"]
[connection signal="on_player_hurt" from="Player" to="GameController/Health System" method="hurt_player"]
[connection signal="on_player_hurt" from="Player" to="GameController/UI Controller" method="update_player_ui"]
[connection signal="on_player_loses_life" from="Player" to="GameController/Health System" method="kill_player"]
[connection signal="area_entered" from="Destroyer" to="Destroyer" method="_on_area_entered"]
[connection signal="button_down" from="Debug/VBoxContainer/Next Boss" to="." method="load_next_boss"]
[connection signal="button_down" from="CanvasLayer/TRY AGAIN/MarginContainer/VBoxContainer/Yes" to="." method="restart_level"]
[connection signal="button_down" from="CanvasLayer/TRY AGAIN/MarginContainer/VBoxContainer/No" to="." method="show_title_screen"]
[connection signal="finished" from="soundController/AudioStreamPlayer" to="soundController" method="play_loop"]

[editable path="Player"]
[editable path="Debug"]
[editable path="CanvasLayer/TRY AGAIN"]
